--- a/.github/workflows/chrome_pw.yml
+++ b/.github/workflows/chrome_pw.yml
@@ -151,23 +151,25 @@ jobs:
           export DISPLAY=:99
           su appuser -c "nohup python3 /home/appuser/automate.py > /home/appuser/chrome.log 2>&1 &"
           
-          # Cloudflare Tunnel (保持不变，以便你依然可以连进去观察)
+          # Cloudflare Tunnel
           curl -L --output cloudflared.deb https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
           dpkg -i cloudflared.deb
           cloudflared tunnel --url http://localhost:6080 > tunnel.log 2>&1 &
           
           echo "Waiting for Tunnel..."
-          for i in \$(seq 1 10); do
-            TUNNEL_URL=\$(grep -oE "https://[a-zA-Z0-9-]+\.trycloudflare\.com" tunnel.log | head -1)
-            if [ -n "\$TUNNEL_URL" ]; then
-                echo "=========================================================="
-                echo "🖥️  Automation Started!"
-                echo "🔗  Watch Progress via VNC: \$TUNNEL_URL/vnc.html?autoconnect=true"
-                echo "=========================================================="
+          for i in $(seq 1 10); do
+            TUNNEL_URL=$(grep -oE "https://[a-zA-Z0-9-]+\.trycloudflare\.com" tunnel.log | head -1)
+            if [ -n "$TUNNEL_URL" ]; then
+                echo "Found Tunnel URL: $TUNNEL_URL"
                 break
             fi
             sleep 1
           done
+          
+          echo "=========================================================="
+          echo "🖥️  XFCE Desktop Ready!"
+          echo "🔗  VNC Link: $TUNNEL_URL/vnc.html?autoconnect=true"
+          echo "=========================================================="
 
       # 5. 监控下载 (逻辑不变)
       - name: Monitor Download (Wait for IPA)
