--- a/.github/workflows/chrome_pw.yml
+++ b/.github/workflows/chrome_pw.yml
@@ -149,22 +149,54 @@ jobs:
                       '--start-maximized',
                       '--no-first-run',
                       '--no-default-browser-check'
-                  ]
+                  ],
+                  ignore_default_args=["--enable-automation"],
               )
               
-              # 获取默认页面或新建页面
-              page = browser.pages[0] if browser.pages else browser.new_page()
               
               # === 额外反爬措施：移除 navigator.webdriver 属性 ===
               # DrissionPage 默认会自动处理这个，Playwright 需要手动注入
-              page.add_init_script("Object.defineProperty(navigator, 'webdriver', {get: () => undefined})")
-              
+        
               print("🔗 正在访问目标页面...")
-              try:
-                  page.goto('https://decrypt.day/app/id1489932710', timeout=60000)
-                  print("✅ 页面加载完成")
-              except Exception as e:
-                  print(f"⚠️ 页面加载可能超时: {e}")
+              base_url = "https://decrypt.day/app/id1489932710"
+
+              page = browser.pages[0] if browser.pages else browser.new_page()
+              page.add_init_script("Object.defineProperty(navigator, 'webdriver', {get: () => undefined})")
+
+              page.goto(base_url, timeout=90000)
+              page.wait_for_load_state("domcontentloaded")
+
+              js_code = """
+                  async () => {
+                      const formData = new FormData();
+                      formData.append('data', '163,101,97,112,112,73,100,120,25,99,108,57,115,101,52,48,116,113,48,48,97,98,100,111,102,119,113,116,103,111,118,48,122,115,103,118,101,114,115,105,111,110,101,54,46,50,46,48,105,105,115,80,114,101,109,105,101,114,247');
+                      const resp = await fetch('""" + base_url + """?/files', {method: 'POST', body: formData});
+                      return await resp.text();
+                  }
+              """
+              result = page.evaluate(js_code)
+              data_json = json.loads(result)
+              dl_list = json.loads(data_json.get("data", "[]"))
+              
+              target_path = ""
+              for item in dl_list:
+                  if isinstance(item, str) and len(item) == 21:
+                      target_path = item
+                      break
+              
+              if not target_path and "gofile.io" in dl_list:
+                    idx = dl_list.index("gofile.io")
+                    target_path = dl_list[idx-3]
+
+              if not target_path:
+                  print("[Script] 未找到路径，请手动操作。")
+              else:
+                  dl_url = f"{base_url}/dl/{target_path}"
+                  print(f"[Script] 下载页: {dl_url}")
+
+              dl_page = browser.new_page()
+              dl_page.add_init_script("Object.defineProperty(navigator, 'webdriver', {get: () => undefined})")
+              dl_page.goto(dl_url, referer=base_url)
 
               # 保持运行，等待 VNC 查看或后续操作
               while True:
@@ -194,6 +226,8 @@ jobs:
           echo "🖥️  XFCE Desktop Ready!"
           echo "🔗  VNC Link: $TUNNEL_URL/vnc.html?autoconnect=true"
           echo "=========================================================="
+
+          tail -f /home/appuser/chrome.log
 
       # 5. 监控下载 (逻辑不变)
       - name: Monitor Download (Wait for IPA)
