--- a/.github/workflows/chrome_pw.yml
+++ b/.github/workflows/chrome_pw.yml
@@ -123,6 +123,28 @@ jobs:
       # 4. 启动 Chrome (通过 Playwright 自动化) & Cloudflare Tunnel
       - name: Launch Chrome & Cloudflare Tunnel
         run: |
+          # Cloudflare Tunnel
+          curl -L --output cloudflared.deb https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
+          dpkg -i cloudflared.deb
+          cloudflared tunnel --url http://localhost:6080 > tunnel.log 2>&1 &
+          
+          echo "Waiting for Tunnel..."
+          for i in $(seq 1 10); do
+            TUNNEL_URL=$(grep -oE "https://[a-zA-Z0-9-]+\.trycloudflare\.com" tunnel.log | head -1)
+            if [ -n "$TUNNEL_URL" ]; then
+                echo "Found Tunnel URL: $TUNNEL_URL"
+                break
+            fi
+            sleep 1
+          done
+          
+          echo "=========================================================="
+          echo "🖥️  XFCE Desktop Ready!"
+          echo "🔗  VNC Link: $TUNNEL_URL/vnc.html?autoconnect=true"
+          echo "=========================================================="
+
+
+
           cat <<EOF > /home/appuser/automate.py
           from playwright.sync_api import sync_playwright
           import time
@@ -175,25 +197,7 @@ jobs:
           export DISPLAY=:99
           su appuser -c "nohup python3 /home/appuser/automate.py > /home/appuser/chrome.log 2>&1 &"
           
-          # Cloudflare Tunnel
-          curl -L --output cloudflared.deb https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
-          dpkg -i cloudflared.deb
-          cloudflared tunnel --url http://localhost:6080 > tunnel.log 2>&1 &
-          
-          echo "Waiting for Tunnel..."
-          for i in $(seq 1 10); do
-            TUNNEL_URL=$(grep -oE "https://[a-zA-Z0-9-]+\.trycloudflare\.com" tunnel.log | head -1)
-            if [ -n "$TUNNEL_URL" ]; then
-                echo "Found Tunnel URL: $TUNNEL_URL"
-                break
-            fi
-            sleep 1
-          done
-          
-          echo "=========================================================="
-          echo "🖥️  XFCE Desktop Ready!"
-          echo "🔗  VNC Link: $TUNNEL_URL/vnc.html?autoconnect=true"
-          echo "=========================================================="
+          tail -f /home/appuser/chrome.log
 
       # 5. 监控下载 (逻辑不变)
       - name: Monitor Download (Wait for IPA)
