--- a/.github/workflows/chrome_pw.yml
+++ b/.github/workflows/chrome_pw.yml
@@ -150,7 +150,7 @@ jobs:
               
               # 使用 launch_persistent_context 以保持 UserDataDir 和配置
               browser = p.chromium.launch_persistent_context(
-                  user_data_dir=USER_DATA_DIR,
+                  #user_data_dir=USER_DATA_DIR,
                   executable_path=EXECUTABLE_PATH,
                   headless=False,  # 必须为 False 才能在 VNC 看到
                   viewport=None,   # 禁用默认视口大小，跟随窗口
@@ -158,11 +158,11 @@ jobs:
                       '--no-sandbox',
                       '--disable-gpu',
                       # === 核心反爬参数 ===
-                      '--disable-blink-features=AutomationControlled', 
-                      '--start-maximized',
-                      '--no-first-run',
-                      '--no-default-browser-check',
-                      '--disable-dev-shm-usage',
+                      # '--disable-blink-features=AutomationControlled', 
+                      # '--start-maximized',
+                      # '--no-first-run',
+                      # '--no-default-browser-check',
+                      # '--disable-dev-shm-usage',
                   ],
                   ignore_default_args=["--enable-automation"],
               )
